Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11816

LNet Health: Correct timeout defaults

XMLWordPrintable

    • 3
    • 9223372036854775807

      Turn on health by default since the ability to retransmit is useful.
      Setup proper default for timeouts when health is enabled/disabled.

      Detailed problem and solution documented here:
      https://wiki.whamcloud.com/display/LNet/LNet+Transaction+Timeouts

            ashehata Amir Shehata (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: